--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "mongoose": "^5.0.12",
+    "path": "^0.12.7",
     "request": "^2.85.0"
   }
 }
