--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "fs": "0.0.1-security",
     "mongoose": "^5.0.12",
     "path": "^0.12.7",
     "request": "^2.85.0"
